--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,8 @@
     -->
     <title>React App</title>
   </head>
-  <body class="bg-brand-secondary h-screen">
+  <body id="root" class="bg-brand-secondary h-screen overflow-y-scroll">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
