--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="flex flex-col min-h-screen overflow-y-scroll pb-safe bg-brand-primary">
+  <body class="flex flex-col items-center min-h-screen overflow-y-scroll pb-safe bg-brand-primary">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
