--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ian Steele / Steele Design co</title>
   </head>
-  <body class="flex flex-col items-center min-h-screen overflow-y-scroll pb-safe bg-brand-primary">
+  <body class="overflow-y-scroll pb-safe bg-brand-primary">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="flex flex-col items-center w-full h-full min-h-screen"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
