A bunch of changes to the styling of content. Just rolling with it

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,9 +32,12 @@
     -->
     <title>Ian Steele / Steele Design co</title>
   </head>
-  <body class="overflow-y-scroll pb-safe bg-brand-primary">
+  <body class="overflow-y-scroll bg-black pb-safe">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="flex flex-col items-center w-full h-full min-h-screen"></div>
+    <div
+      id="root"
+      class="flex flex-col items-center w-full h-full min-h-screen"
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
