--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;700&display=swap"
       rel="stylesheet"
     />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -32,7 +33,9 @@
     -->
     <title>Ian Steele / Steele Design co</title>
   </head>
-  <body class="overflow-y-scroll bg-black pb-safe">
+  <body
+    class="overflow-y-scroll transition-colors duration-500  bg-brand-primary pb-safe"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div
       id="root"
