--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      Learn how tcp index.html 404.htmlo configure a non-root public URL by running `npm run build`.
     -->
     <title>Ian Steele / Steele Design co</title>
   </head>
