--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <title>Ian Steele / Steele Design co</title>
   </head>
   <body
-    class="overflow-y-scroll transition-colors duration-500  bg-brand-primary pb-safe"
+    class="overflow-y-scroll transition-colors duration-500  dark bg-brand-primary pb-safe"
   >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div
