Makes dark the default theme

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,7 @@
     -->
     <title>Ian Steele / Steele Design co</title>
   </head>
-  <body
-    class="overflow-y-scroll transition-colors duration-500  dark bg-brand-primary pb-safe"
-  >
+  <body class="overflow-y-scroll bg-brand-primary pb-safe">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div
       id="root"
