Reverted bottom message

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     -->
     <title>Ian Steele / Steele Design co</title>
   </head>
-  <body class="overflow-y-scroll bg-brand-secondary pb-safe">
+  <body class="overflow-y-scroll bg-brand-primary pb-safe">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div
       id="root"
@@ -49,10 +49,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <p
-      class="fixed left-0 w-full text-sm font-bold leading-6 text-center  bottom-1"
-    >
-      ❤️ Thanks for visiting!
-    </p>
   </body>
 </html>
